objects/LLC_BI__Contact_Demographic__c.object
<CustomObject>
    <description>This object stores additional contact information for demographic.</description>
    <fields>
        <fullName>LLC_BI__American_Indian_Alaska_Native__c</fullName>
        <description>Users populate this optional text field to specify the applicant’s American Indian or Alaska Native race. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the applicant’s American Indian or Alaska Native race.</inlineHelpText>
        <label>American Indian or Alaska Native</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Asian_Race__c</fullName>
        <description>Users populate this optional text field to specify the applicant’s Asian race. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the applicant’s Asian race.</inlineHelpText>
        <label>Asian Race</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Black_African_American_Race__c</fullName>
        <description>Users populate this optional text field to specify the applicant’s Black or African American race. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the applicant’s Black or African American race.</inlineHelpText>
        <label>Black or African American Race</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Users populate this optional lookup field to reference the Contact record to which an Contact Demographic record refers. By default, this field is blank.</description>
        <inlineHelpText>Enter the Contact record to which this Contact Demographic refers.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Demographics</relationshipLabel>
        <relationshipName>Contact_Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Declined_To_Provide_Gender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox field to indicate that the individual declined to provide their gender information. By default, it is false.</description>
        <inlineHelpText>Use this field to indicate the individual declined to provide their gender information.</inlineHelpText>
        <label>Declined to Provide Gender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ethnicity_FF__c</fullName>
        <description>Users populate this optional text field to specify the applicant’s ethnicity if they select Other Hispanic or Latino Ethnicity. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the applicant’s ethnicity if they select Other Hispanic or Latino Ethnicity.</inlineHelpText>
        <label>Ethnicity Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ethnicity__c</fullName>
        <description>Users populate this optional multi-select picklist field to indicate the applicant’s ethnicity. By default, it is empty.</description>
        <inlineHelpText>Select value(s) to indicate the applicant’s ethnicity.</inlineHelpText>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Cuban</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Puerto Rican</fullName>
                </value>
                <value>
                    <fullName>Other Hispanic or Latino Ethnicity</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Gender_FF__c</fullName>
        <description>Users populate this optional text field to specify the applicant’s gender. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the applicant’s gender.</inlineHelpText>
        <label>Gender Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pacific_Islander_Race__c</fullName>
        <description>Users populate this optional text field to specify the applicant’s Pacific Islander race. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the applicant’s Pacific Islander race.</inlineHelpText>
        <label>Pacific Islander Race</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Race__c</fullName>
        <description>Users populate this optional multi-select picklist field to indicate the applicant’s race. By default, it is empty.</description>
        <inlineHelpText>Select value(s) to indicate the applicant’s race.</inlineHelpText>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other Asian Race</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Ethiopian</fullName>
                </value>
                <value>
                    <fullName>Haitian</fullName>
                </value>
                <value>
                    <fullName>Jamaican</fullName>
                </value>
                <value>
                    <fullName>Nigerian</fullName>
                </value>
                <value>
                    <fullName>Somali</fullName>
                </value>
                <value>
                    <fullName>Other Black or African American Race</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Guamanian or Chamorro</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Other Pacific Islander Race</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Demographic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Demographic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>